# matrix_multiplication

./: CMakeLists.txt  Makefile  create_square_matrix.cpp  main.c  main.cpp  matrix_multiply.c  matrix_multiply.cpp  matrix_multiply.h
